# tradfi

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  Procfile  README.md  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  run_tui.py  serve.py  server.py
.claude/: settings.json
.claude/skills/commit/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/screen-report/: SKILL.md
.claude/skills/techdebt/: SKILL.md
.claude/skills/test/: SKILL.md
data/: asia.txt  australia.txt  austria.txt  belgium.txt  brazil.txt  canada.txt  china.txt  commodities.txt  denmark.txt  dividends.txt  dow30.txt  emerging.txt  etf.txt  europe.txt  finland.txt  france.txt  germany.txt  hongkong.txt  india.txt  indonesia.txt  international.txt  israel.txt  italy.txt  japan.txt  korea.txt  malaysia.txt  mexico.txt  nasdaq.txt  nasdaq100.txt  netherlands.txt  newzealand.txt  norway.txt  portugal.txt  reits.txt  russell2000.txt  sectors.txt  singapore.txt  southafrica.txt  sp500.txt  spain.txt  (+8 more)
src/tradfi/: __init__.py  api.py  cli.py
src/tradfi/api/: __init__.py  auth.py  converters.py  main.py  scheduler.py  schemas.py
src/tradfi/commands/: __init__.py  analyze.py  cache.py  compare.py  lists.py  quarterly.py  screen.py  watchlist.py
src/tradfi/core/: __init__.py  currency.py  data.py  portfolio.py  quarterly.py  remote_provider.py  research.py  screener.py  (+2 more)
tests/: test_cache_refresh.py  test_display.py  test_fetch_missing.py  test_models.py  test_screener.py  test_sparkline.py  test_technical.py  test_universe_loading.py  test_valuation.py
web/: package-lock.json  package.json
(+36 files in other folders)
